--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">PokerPlanning.Web</a>
+      <a class="navbar-brand" [routerLink]="['/']">PokerPlanning</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -30,11 +30,6 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/counter']"
               >Counter</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
             >
           </li>
         </ul>
