--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/home/home.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,26 @@
 <h1>Hello, buddy!</h1>
 <p>Welcome to online planning poker!</p>
+
+
+<div class="container-fluid">
+  <div class="center-block">
+    <div class="row">
+      <div class="mx-auto w-25 p-3">
+        <div class="row">
+          <h3 class="mx-auto">Lets start planning!</h3>
+        </div>
+        <div class="row mx-auto">
+          <img class="mx-auto" src="assets/images/brain.svg" alt="Use brain">
+        </div>
+
+        <div class="row">
+          <label class="mx-auto" for="basic-url">Your name:</label>
+          <div class="input-group mb-3 mx-auto">
+            <input type="text" class="form-control" id="basic-url" [(ngModel)]="username">
+          </div>
+          <button class="btn btn-primary mx-auto" (click)="createPlanningRoom()">Go!</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
