--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/room.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/room.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="mx-auto w-auto p-3">
         <div class="row">
-          <h3 class="mx-auto">Joining room {{room.id}}</h3>
+          <h3 class="mx-auto" *ngIf="room">Joining room {{room.id}}</h3>
         </div>
         <div class="row mx-auto">
           <svg width="10em" height="10em" viewBox="0 0 16 16" class="mx-auto bi bi-door-open-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -16,7 +16,7 @@
           <div class="input-group mb-3 mx-auto">
             <input type="text" class="form-control" id="basic-url" [(ngModel)]="joiningUsername">
           </div>
-          <button class="btn btn-primary mx-auto" (click)="joinPlanningRoom()">Join</button>
+          <button class="btn btn-primary mx-auto" (click)="joinPlanningRoom()">Let me in!</button>
         </div>
       </div>
     </div>
@@ -61,11 +61,11 @@
   <div class="row">
 
     <div class="col-md-3">
-      <app-room-users [room]="room"></app-room-users>
+      <app-room-users [room]="room">Loading...</app-room-users>
     </div>
 
     <div class="col-md-6">
-      <app-room-table [room]="room"></app-room-table>
+      <app-room-table [room]="room">Loading...</app-room-table>
     </div>
   </div>
 </div>
