Added loading screen, join pages corrections

--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/room.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/room.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf="!currentUser">
+<div class="container-fluid" *ngIf="!isJoining && !currentUser">
   <div class="center-block">
 
     <div class="row">
@@ -7,8 +7,10 @@
           <h3 class="mx-auto" *ngIf="room">Joining room {{room.id}}</h3>
         </div>
         <div class="row mx-auto">
-          <svg width="10em" height="10em" viewBox="0 0 16 16" class="mx-auto bi bi-door-open-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2v13h1V2.5a.5.5 0 0 0-.5-.5H11zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
+          <svg width="10em" height="10em" viewBox="0 0 16 16" class="mx-auto bi bi-door-open-fill" fill="currentColor"
+               xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+                  d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2v13h1V2.5a.5.5 0 0 0-.5-.5H11zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
           </svg>
         </div>
         <div class="row">
@@ -16,7 +18,8 @@
           <div class="input-group mb-3 mx-auto">
             <input type="text" class="form-control" id="basic-url" [(ngModel)]="joiningUsername">
           </div>
-          <button class="btn btn-primary mx-auto" (click)="joinPlanningRoom()">Let me in!</button>
+          <button class="btn btn-primary mb-3 mx-auto" (click)="joinPlanningRoom()">Let me in!</button>
+          <button class="btn btn-primary mb-3 mx-auto" (click)="observePlanningRoom()">Just watchin'</button>
         </div>
       </div>
     </div>
@@ -40,8 +43,12 @@
         </svg>
       </button>
 
-      <button type="button" class="btn bg-transparent" style="box-shadow: none" data-toggle="tooltip"
+      <button type="button" class="btn bg-transparent" style="box-shadow: none"
               data-placement="top"
+              role="button"
+              data-toggle="tooltip"
+              data-trigger="focus"
+              (click)="copyRoomLinkClipboard()"
               title="Copy room link">
         <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-link" fill="currentColor"
              xmlns="http://www.w3.org/2000/svg">
@@ -61,7 +68,7 @@
   <div class="row">
 
     <div class="col-md-3">
-      <app-room-users [room]="room">Loading...</app-room-users>
+      <app-room-users [users]="room.users">Loading...</app-room-users>
     </div>
 
     <div class="col-md-6">
