--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/home/home.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/home/home.component.html
@@ -2,46 +2,47 @@
 <p>Welcome to online planning poker!</p>
 
 
-<div class="container-fluid">
-  <div class="center-block">
-    <div class="row">
-      <div class="mx-auto w-25 p-3">
-        <div class="row">
-          <h3 class="mx-auto">Lets start planning!</h3>
-        </div>
-        <div class="row mx-auto">
-          <svg width="10em" height="10em" viewBox="0 0 16 16" class="mx-auto bi bi-calendar2-week-fill"
-               fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-                  d="M14 2H2a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1zM2 1a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"/>
-            <path fill-rule="evenodd"
-                  d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z"/>
-            <path
-              d="M2.5 4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H3a.5.5 0 0 1-.5-.5V4zM11 7.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
-          </svg>
-        </div>
+<div class="container-fluid center-block">
 
-        <div class="row">
-          <label class="mx-auto" for="basic-url">Your name:</label>
-          <div class="input-group mb-3 mx-auto">
-            <input type="text" class="form-control" id="basic-url" [(ngModel)]="username">
-          </div>
-          <div class="input-group mb-3 mx-auto" *ngIf="cardTemplates?.length > 0">
-            <div class="btn-group mx-auto">
-              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                      aria-expanded="false">
-                User cards template
-              </button>
-              <div class="dropdown-menu">
-                <ng-container *ngFor="let template of cardTemplates">
-                  <a class="dropdown-item" href="#">{{template.id}}</a>
-                </ng-container>
-              </div>
-            </div>
-          </div>
-          <button class="btn btn-primary mx-auto" (click)="createPlanningRoom()">Go!</button>
-        </div>
-      </div>
+  <div class="mx-auto w-50">
+    <div>
+      <h3 class="mx-auto d-flex justify-content-center">Lets start planning!</h3>
     </div>
+    <div class="row mx-auto">
+      <svg width="10em" height="10em" viewBox="0 0 16 16" class="mx-auto bi bi-calendar2-week-fill"
+           fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+              d="M14 2H2a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1zM2 1a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"/>
+        <path fill-rule="evenodd"
+              d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z"/>
+        <path
+          d="M2.5 4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H3a.5.5 0 0 1-.5-.5V4zM11 7.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
+      </svg>
+    </div>
+
+    <div>
+      <label class="mx-auto" for="basic-url">Your name:</label>
+      <div class="input-group mx-auto p-2">
+        <input type="text" class="form-control" id="basic-url" [(ngModel)]="username">
+      </div>
+        <ul ngbNav #nav="ngbNav" class="nav-tabs p-2">
+          <li ngbNavItem>
+            <a ngbNavLink>Template</a>
+            <ng-template ngbNavContent class="row mx-auto">
+              <app-cards-templates [templates]="cardTemplates" (currentTemplate)="onChanged($event)"></app-cards-templates>
+            </ng-template>
+          </li>
+          <li ngbNavItem>
+            <a ngbNavLink>New cards</a>
+            <ng-template ngbNavContent>
+              <app-cards></app-cards>
+            </ng-template>
+          </li>
+        </ul>
+        <div [ngbNavOutlet]="nav"></div>
+    </div>
+  </div>
+  <div class="row mx-auto w-25 p-2">
+    <button class="btn btn-primary mx-auto" (click)="createPlanningRoom()">Go!</button>
   </div>
 </div>
