--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/table/table.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/table/table.component.html
@@ -2,4 +2,7 @@
   <h5 class="d-flex justify-content-between align-items-center mb-3">
     <span class="text-dark">Table</span>
   </h5>
+  <div>
+    <app-cards [cards]="room.cards"></app-cards>
+  </div>
 </div>
