--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/users/users.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/users/users.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="users">
   <h5 class="d-flex justify-content-between align-items-center mb-3">
     <span class="text-dark">Users</span>
-    <span class="badge badge-secondary badge-pill">{{users.length}}</span>
+    <span class="badge badge-primary badge-pill">{{users.length}}</span>
   </h5>
   <ul class="list-group">
     <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let user of users;">
