--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/table/table.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/table/table.component.html
@@ -2,7 +2,21 @@
   <h5 class="d-flex justify-content-between align-items-center mb-3">
     <span class="text-dark">Table</span>
   </h5>
-  <div>
-    <app-cards [cards]="room.cards"></app-cards>
+  <div class="pl-3">
+    <div class="row border-top">
+      <h3>{{currentUser.name}}</h3>
+    </div>
+    <div class="row border-top" *ngIf="currentRound">
+      <h6>Current round:</h6><h6>{{currentRound.id}}</h6>
+    </div>
+    <div class="row pt-2 border-top">
+      <div class="pr-2">
+        <button type="button" class="btn btn-primary d-inline-flex p-2" (click)="showAllVotes()">Show votes</button>
+      </div>
+      <button type="button" class="btn btn-success d-inline-flex p-2" (click)="spinNextRound()">Next round</button>
+    </div>
+    <div class="row pt-2">
+      <app-cards [cards]="room.cards" [roundHub]="roundHub" [currentUser]="currentUser" [currentRound]="currentRound"></app-cards>
+    </div>
   </div>
 </div>
