--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/home/home.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/home/home.component.html
@@ -1,8 +1,6 @@
-<h1>Hello, buddy!</h1>
-<p>Welcome to online planning poker!</p>
-
-
-<div class="container-fluid center-block">
+<div class="container center-block">
+  <h1>Hello, buddy!</h1>
+  <p>Welcome to online planning poker!</p>
 
   <div class="mx-auto w-50">
     <div>
