--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/room.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/room.component.html
@@ -63,7 +63,7 @@
 
     <div class="row">
       <div class="col-md-3">
-        <app-room-users [users]="room.users">Loading...</app-room-users>
+        <app-room-users [users]="room.users" [roundHub]="roundHub">Loading...</app-room-users>
       </div>
 
       <div class="col-md-9">
