Added template name

--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/cards/templates/cards.templates.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/cards/templates/cards.templates.component.html
@@ -2,7 +2,7 @@
   <div class="col-auto">
     <div class="list-group list-group-flush" id="list-tab" role="tablist">
       <a class="list-group-item list-group-item-action" role="tab" data-toggle="list"
-         (click)="setCurrentTemplate(template)">{{template.id}}</a>
+         (click)="setCurrentTemplate(template)">{{template.name}}</a>
     </div>
   </div>
 </div>
