--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/cards/templates/cards.templates.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/components/room/cards/templates/cards.templates.component.html
@@ -1,5 +1,5 @@
-<div class="row mx-auto p-3 d-flex justify-content-center" *ngFor="let template of templates;">
-  <div class="col-auto">
+<div class="row pt-2" *ngFor="let template of templates;">
+  <div class="col-lg-12">
     <div class="list-group list-group-flush" id="list-tab" role="tablist">
       <a class="list-group-item list-group-item-action" role="tab" data-toggle="list"
          (click)="setCurrentTemplate(template)">{{template.name}}</a>
