--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -16,10 +16,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div
-        class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
+        class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
         [ngClass]="{ show: isExpanded }"
       >
-        <app-login-menu></app-login-menu>
         <ul class="navbar-nav flex-grow">
           <li
             class="nav-item"
@@ -39,6 +38,7 @@
             >
           </li>
         </ul>
+        <app-login-menu></app-login-menu>
       </div>
     </div>
   </nav>
