--- a/PokerPlanning/PokerPlanning.Web/Pages/_ViewImports.cshtml
+++ b/PokerPlanning/PokerPlanning.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using PokerPlanning.Web
+﻿@using PokerPlanning.Web
 @namespace PokerPlanning.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
