--- a/PokerPlanning/PokerPlanning.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/PokerPlanning/PokerPlanning.Web/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using PokerPlanning.Web.Models;
+﻿@using PokerPlanning.Web.Models
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
